tests/invalid/dict_comparison_ordering/main.py
def run_case() -> None:
    a: dict[int, int] = {1: 1}
    b: dict[int, int] = {2: 2}
    bad: bool = a < b


if __name__ == "__main__":
    run_case()
